# crown-cnc-estimator

./: README.md  pyproject.toml  streamlit_app.py
crown_cnc_estimator/: __init__.py  cli.py  runtime.py  step_parser.py
tests/: sample.step  sample_break.step  sample_d.step  sample_digit_break.step  sample_exp.step  sample_internal_space.step  sample_pre.step  sample_sign_space.step  sample_space.step  sample_split.step  test_bounding_box.py  test_bounding_box_break.py  test_bounding_box_d_exp.py  test_bounding_box_digit_break.py  test_bounding_box_exp.py  test_bounding_box_internal_space.py  test_bounding_box_pre.py  test_bounding_box_sign_space.py  test_bounding_box_space.py  test_bounding_box_split.py  test_cli.py  test_cli_interactive.py  test_cli_parse_runtime.py  test_cli_runtime.py  test_material_removal_rate.py  test_runtime.py  test_step_parsing.py
